clap_derive/tests/ui/flatten_struct_in_enum.stderr
error[E0277]: the trait bound `SubCmd: Subcommand` is not satisfied
 --> $DIR/flatten_struct_in_enum.rs:1:10
  |
1 | #[derive(clap::Parser)]
  |          ^^^^^^^^^^^^ the trait `Subcommand` is not implemented for `SubCmd`
  |
  = note: required by `has_subcommand`
  = note: this error originates in the derive macro `clap::Parser` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `SubCmd: Subcommand` is not satisfied
 --> $DIR/flatten_struct_in_enum.rs:1:10
  |
1 | #[derive(clap::Parser)]
  |          ^^^^^^^^^^^^ the trait `Subcommand` is not implemented for `SubCmd`
  |
  = note: required by `augment_subcommands`
  = note: this error originates in the derive macro `clap::Parser` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `SubCmd: Subcommand` is not satisfied
 --> $DIR/flatten_struct_in_enum.rs:1:10
  |
1 | #[derive(clap::Parser)]
  |          ^^^^^^^^^^^^ the trait `Subcommand` is not implemented for `SubCmd`
  |
  = note: required by `augment_subcommands_for_update`
  = note: this error originates in the derive macro `clap::Parser` (in Nightly builds, run with -Z macro-backtrace for more info)
