clap_derive/tests/ui/flatten_struct_in_enum.rs
#[derive(clap::Parser)]
enum Opt {
    #[clap(flatten)]
    Sub(SubCmd),
}

#[derive(clap::Parser)]
struct SubCmd {}

fn main() {}
